# HaskellDomino

./: Domino.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  NewPlacement.hs  Play.hs  View.hs  VisibleStone.hs
